--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -1,150 +1,90 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title th:text="#{add_equipment_btn}"></title>
-  <link rel="stylesheet" th:href="@{/css/styles.css}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title th:text="#{cat_title}"></title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 <div class="top-lane">
-  <div class="top-lane-section">
-    <h1 class="txt-white">Kategorie</h1>
-    <div class="nav-container">
-      <button>Kategorie</button>
-      <button>Moje rezerwacje</button>
+    <div class="top-lane-section">
+        <h1 class="txt-white" th:text="#{cat_title}"></h1>
+        <div class="nav-container">
+            <button th:text="#{cat_title}"></button>
+            <button th:text="#{cat_redirect_reservations}"></button>
+        </div>
     </div>
-  </div>
-  <div class="top-lane-account">
-    <div th:if="${user != null}">
-      <span th:text="${user.username}"></span>
-      <span th:text="${user.authorities[0].authority}"></span>
-      <a th:href="@{/logout}" class="btn btn-danger">Wyloguj się</a>
+    <div class="top-lane-account">
+        <div th:if="${user != null}">
+            <span th:text="${user.email}"></span>
+            <span th:text="${user.role}"></span>
+            <a th:href="@{/logout}" class="btn btn-danger" th:text="#{cat_btn_logout}"></a>
+        </div>
+        <a th:if="${user == null}" th:href="@{/sign_in}" class="btn btn-primary" th:text="#{cat_btn_sign_in}"></a>
     </div>
-    <a th:if="${user == null}" th:href="@{/sign_in}" class="btn btn-primary">Zaloguj się</a>
-  </div>
 </div>
 <div class="center-body">
 
-    <div th:if="${user != null and user.authorities[0].authority == 'ROLE_ADMIN'}" class="category-container" onclick="showModal(null)">
-      <div class="plus-container">
-        <i class="bi bi-plus-lg plus-icon"></i>
-        <h2>Dodaj kategorię</h2>
-      </div>
+    <div th:if="${user != null and user.role == 'ADMIN'}" class="category-container"
+         onclick="showModal(null)">
+        <div class="plus-container">
+            <i class="bi bi-plus-lg plus-icon"></i>
+            <h2 th:text="#{cat_btn_add}"></h2>
+        </div>
     </div>
 
-  <div th:each="category : ${categories}" class="category-container">
-    <div th:href="@{/categories/{id}(id=${category.categoryID})}">
-      <label th:text="${category.name}"></label>
-      <img th:src="@{/categories/image/{id}(id=${category.categoryID})}" alt="Category Image" style="width: 100px; height: 100px;"/>
-      <a th:href="@{/categories/{id}(id=${category.categoryID})}">Zobacz wyposażenie</a>
-      <a th:if="${user != null and user.authorities[0].authority == 'ROLE_ADMIN'}"
-         th:data-id="${category.categoryID}"
-         th:data-name="${category.name}"
-         th:data-image="@{/categories/image/{id}(id=${category.categoryID})}"
-         onclick="showModal(this)">
-        Edytuj
-      </a>
-      <form method="post" th:action="@{/categories/delete/{id}(id=${category.categoryID})}" th:if="${user != null and user.authorities[0].authority == 'ROLE_ADMIN'}">
-        <input type="hidden" name="_method" value="DELETE">
-        <div>
-          <button type="submit">Usuń</button>
+    <div th:each="category : ${categories}" class="category-container">
+        <div th:href="@{/categories/{id}(id=${category.categoryID})}">
+            <label th:text="${category.name}"></label>
+            <img th:src="@{/categories/image/{id}(id=${category.categoryID})}" alt="Category Image"
+                 style="width: 100px; height: 100px;"/>
+            <a th:href="@{/categories/{id}(id=${category.categoryID})}" th:text="#{cat_btn_open}"></a>
+            <a th:if="${user != null and user.role == 'ADMIN'}"
+               th:data-id="${category.categoryID}"
+               th:data-name="${category.name}"
+               th:data-image="@{/categories/image/{id}(id=${category.categoryID})}"
+               th:text="#{cat_btn_edit}"
+               onclick="showModal(this)">
+            </a>
+            <form method="post" th:action="@{/categories/delete/{id}(id=${category.categoryID})}"
+                  th:if="${user != null and user.role == 'ADMIN'}">
+                <input type="hidden" name="_method" value="DELETE">
+                <div>
+                    <button type="submit" th:text="#{cat_btn_delete}"></button>
+                </div>
+            </form>
         </div>
-      </form>
     </div>
-  </div>
 </div>
 
 <div id="modal" class="modal-overlay" onclick="hideModal()">
-  <form id="categoryForm" enctype="multipart/form-data" method="POST">
-    <input type="hidden" id="hiddenMethod" name="_method" value="POST">
-    <div class="modal-window" onclick="event.stopPropagation();">
+    <form id="categoryForm" enctype="multipart/form-data" method="POST">
+        <input type="hidden" id="hiddenMethod" name="_method" value="POST">
+        <div class="modal-window" onclick="event.stopPropagation();">
 
-      <h2 id="modal-title">Edytuj kategorię</h2>
+            <h2 id="modal-title" th:text="cat_btn_edit"></h2>
 
-      <input type="hidden" id="categoryID" name="categoryID">
+            <input type="hidden" id="categoryID" name="categoryID">
 
-      <div class="modal-image" onclick="triggerFileInput()">
-        <p>Kliknij, aby zmienić obrazek</p>
-        <img id="preview" style="display: none; max-width: 100%; max-height: 150px;" />
-      </div>
+            <div class="modal-image" onclick="triggerFileInput()">
+                <p th:text="#{cat_modal_img}"></p>
+                <img id="preview" style="display: none; max-width: 100%; max-height: 150px;"/>
+            </div>
 
-      <input type="file" id="fileInput" name="image" accept="image/*" style="display: none;" onchange="previewImage(event)">
+            <input type="file" id="fileInput" name="image" accept="image/*" style="display: none;"
+                   onchange="previewImage(event)">
 
-      <input type="text" id="categoryName" name="name" placeholder="Nazwa kategorii">
+            <input type="text" id="categoryName" name="name" th:placeholder="#{cat_modal_name}">
 
-      <button id="saveButton" type="submit">Zapisz zmiany</button>
-      <button type="button" onclick="hideModal()">Anuluj</button>
-    </div>
-  </form>
+            <span id="catBtnAdd" th:text="#{cat_btn_add}" style="display: none;"></span>
+            <span id="catBtnEdit" th:text="#{cat_btn_edit}" style="display: none;"></span>
+
+            <button id="saveButton" type="submit" th:text="#{cat_modal_save}"></button>
+            <button type="button" onclick="hideModal()" th:text="#{cat_modal_cancel}"></button>
+        </div>
+    </form>
 </div>
-
-<script>
-  function showModal(element) {
-      const modalTitle = document.getElementById('modal-title');
-      const categoryIdField = document.getElementById('categoryID');
-      const categoryNameField = document.getElementById('categoryName');
-      const preview = document.getElementById('preview');
-      const saveButton = document.getElementById('saveButton');
-      const deleteButton = document.getElementById('deleteButton');
-      const form = document.getElementById('categoryForm');
-      const hiddenMethod = document.getElementById('hiddenMethod');
-
-      if (element != null) {
-          // Tryb edycji
-          console.log(element);
-          const categoryID = element.getAttribute("data-id");
-          const categoryName = element.getAttribute("data-name");
-          const categoryImage = element.getAttribute("data-image");
-
-          categoryIdField.value = categoryID;
-          categoryNameField.value = categoryName;
-          preview.src = categoryImage;
-          preview.style.display = 'block';
-
-          modalTitle.innerText = "Edytuj kategorię";
-          saveButton.innerText = "Zapisz zmiany";
-          form.action = "/categories/edit";
-          hiddenMethod.value = "PUT";
-      } else {
-          // Tryb dodawania
-          categoryIdField.value = "";
-          categoryNameField.value = "";
-          preview.style.display = 'none';
-
-          modalTitle.innerText = "Dodaj kategorię";
-          saveButton.innerText = "Dodaj kategorię";
-          form.action = "/categories/add";
-          form.method = "POST";
-          hiddenMethod.value = "POST";
-      }
-
-      document.getElementById('modal').classList.add('active');
-  }
-
-    function hideModal() {
-        const modal = document.getElementById('modal');
-        modal.classList.remove('active');
-    }
-
-    function triggerFileInput() {
-      document.getElementById('fileInput').click();
-    }
-
-  function previewImage(event) {
-    const file = event.target.files[0];
-    const preview = document.getElementById('preview');
-
-    if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-            preview.src = e.target.result;
-            preview.style.display = 'block';
-        };
-        reader.readAsDataURL(file);
-    }
-  }
-</script>
-
+<script th:src="@{/js/categories.js}"></script>
 </body>
 </html>
